feat: refactorisation de la gestion des exceptions et simplification des contrôleurs
- Introduction d'une classe scellée  pour centraliser la gestion des exceptions.
- Création de sous-classes spécifiques pour les exceptions comme , , etc.
- Mise en place du gestionnaire global d'exceptions  pour gérer de manière centralisée les erreurs via des réponses adaptées ().
- Utilisation d'un  pour simplifier la gestion des erreurs dans les réponses HTTP.
- Suppression des blocs  redondants dans les contrôleurs, la gestion des erreurs étant désormais centralisée dans le gestionnaire global.
- Refactorisation des contrôleurs pour une meilleure lisibilité et simplification du code.
- Ajout de la gestion des erreurs spécifiques pour les paiements déjà traités et les échecs de paiement dans .

Ce commit améliore la maintenabilité, la lisibilité et la robustesse de la gestion des erreurs dans l'application.