@@ -1,12 +1,14 @@
 package com.transdev.reservations.domain.services;
 
+import com.transdev.reservations.domain.exceptions.PaymentAlreadyProcessedException;
+import com.transdev.reservations.domain.exceptions.PaymentFailedException;
 import com.transdev.reservations.domain.model.Bill;
 import com.transdev.reservations.domain.ports.incoming.BillingService;
 import com.transdev.reservations.domain.ports.outgoing.BillRepository;
 import com.transdev.reservations.domain.ports.outgoing.PaymentService;
 
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.Optional;
 
 public class BillingServiceImpl implements BillingService {
 
@@ -20,12 +22,16 @@ public class BillingServiceImpl implements BillingService {
 
     @Override
     public Bill payReservation(Long reservationId, String paymentType) {
+        Optional<Bill> existingBill = billRepository.findByReservationId(reservationId);
+        if (existingBill.isPresent()) {
+            throw new PaymentAlreadyProcessedException("La réservation a déjà été payée.");
+        }
         boolean paymentSuccess = paymentService.processPayment(reservationId, paymentType);
         if (paymentSuccess) {
             Bill bill = new Bill(reservationId, paymentType);
             return billRepository.save(bill);
         } else {
-            throw new IllegalArgumentException("Payment failed");
+            throw new PaymentFailedException("Le paiement a échoué. Veuillez réessayer.");
         }
     }
 
@@ -38,6 +44,6 @@ public class BillingServiceImpl implements BillingService {
     public List<Bill> getBillsSortedByAmount() {
         return billRepository.findAll().stream()
                 .sorted((b1, b2) -> b1.reservationId().compareTo(b2.reservationId())) // Trier par identifiant
-                .collect(Collectors.toList());
+                .toList();
     }
 }
